package db

import (
	"database/sql"
	"fmt"
	"strings"
	"sync"
	"time"

	"github.com/golang/protobuf/ptypes"
	_ "github.com/mattn/go-sqlite3"

	"github.com/colinSchofield/entain/racing/logging"
	"github.com/colinSchofield/entain/racing/proto/racing"
)

// RacesRepo provides repository access to races.
type RacesRepo interface {
	// Init will initialise our races repository.
	Init() error

	// List will return a list of races.
	List(filter *racing.ListRacesRequestFilter) ([]*racing.Race, error)
}

type racesRepo struct {
	db   *sql.DB
	init sync.Once
}

// NewRacesRepo creates a new races repository.
func NewRacesRepo(db *sql.DB) RacesRepo {
	return &racesRepo{db: db}
}

// Init prepares the race repository dummy data.
func (r *racesRepo) Init() error {
	var err error

	r.init.Do(func() {
		// For test/example purposes, we seed the DB with some dummy races.
		err = r.seed()
	})

	return err
}

func (r *racesRepo) List(filter *racing.ListRacesRequestFilter) ([]*racing.Race, error) {
	var (
		err   error
		query string
		args  []interface{}
	)

	query = getRaceQueries()[racesList]

	query, args = r.applyFilter(query, filter)

	rows, err := r.db.Query(query, args...)
	if err != nil {
		wrappedError := fmt.Errorf("unexpected error in call to database Query: %w", err)
		logging.Logger().Error(wrappedError)
		return nil, wrappedError
	}

	return r.scanRaces(rows)
}

func (r *racesRepo) applyFilter(query string, filter *racing.ListRacesRequestFilter) (string, []interface{}) {
	var (
		clauses []string
		args    []interface{}
	)

	if filter == nil {
		return query, args
	}

	if len(filter.MeetingIds) > 0 {
		clauses = append(clauses, "meeting_id IN ("+strings.Repeat("?,", len(filter.MeetingIds)-1)+"?)")

		for _, meetingID := range filter.MeetingIds {
			args = append(args, meetingID)
		}
	}

	// default or filter set to false, displays all races regardless of their visibility
	if filter.GetVisible() {
		clauses = append(clauses, "visible = 1")
	}

	if len(clauses) != 0 {
		query += " WHERE " + strings.Join(clauses, " AND ")
	}

	logging.Logger().Debugf("Query: (%s) and args: (%v)", query, args)
	return query, args
}

func (m *racesRepo) scanRaces(
	rows *sql.Rows,
) ([]*racing.Race, error) {
	var races []*racing.Race

	for rows.Next() {
		var race racing.Race
		var advertisedStart time.Time

		if err := rows.Scan(&race.Id, &race.MeetingId, &race.Name, &race.Number, &race.Visible, &advertisedStart); err != nil {
			if err == sql.ErrNoRows {
				logging.Logger().Debug("returning the empty element via error result of sql.ErrNoRows")
				return nil, nil
			}

			wrappedError := fmt.Errorf("unexpected error occurred in call to rows.Scan: %w", err)
			logging.Logger().Error(wrappedError)
			return nil, wrappedError
		}

		ts, err := ptypes.TimestampProto(advertisedStart)
		if err != nil {
			wrappedError := fmt.Errorf("unexpected error occurred in call to ptypes.TimestampProto: %w", err)
			logging.Logger().Error(wrappedError)
			return nil, wrappedError
		}

		race.AdvertisedStartTime = ts

		races = append(races, &race)
	}

	return races, nil
}
